[package]
name = "solana-defi-lending-protocol"
version = "0.1.0"
description = "Kamino Finance-style DeFi lending protocol clone for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_defi_lending_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~1.18"
bytemuck = "1.14"
